Chnage appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,13 @@
 {
+  "ConnectionStrings": {
+    "PostgressConnection":""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BotApiKey":""
 }
